Bug fix remove white gap between header and main on deployed website by changing margin-top to padding-top on main element

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -85,7 +85,7 @@ nav {
 
 /* Main content */
 main {
-    margin-top: 59px;
+    padding-top: 59px;
     background-color: #f5eae3;
     /* 
     Sticky footer - push footer down by utilising unused space in main section.
